# UpTune, Copyright Shawn Xiang (sx@cornell.edu), 2018-2019
# See the LICENSE file for copyright information.

### TODO
  * support rpc session for multi-platform communication
  * support comment-out syntax in complement for TuneBool 
  * support automatic deployment to local/aws/gcp
  * support autotuning with inter-variable constraint  

### 2019-09-11 
  * added constraint features 
  * added support for tuning across gpus
  * updated target decorator (support ut.tune inside)

### 2019-09-01 
  * updated api for automatic tuning type inference 
  * updated module import mechanism for constraint feature

### 2019-07-21
  * unified interface for controller initilization 
  * added adaptive work dierctory selection on shared FS 
  * added Amazon AWS support for cluster auto-tuning 

### 2019-05-30
  * replaced message passing interface with file access
  * added `__tmp__` to store template files 

### 2019-05-28
  * fixed ZMQ msg encoding issue (in intrusive mode)
  * updated XGBoost objective to squared error 
  * incorporated single stage tuning into current flow  
  * enabled automatic clean-up func before running 

### 2019-05-27
  * resolved control conflicts of intrusive / template tuning  
  * supported single/double quotes in regex value detection 
  * migration to Python 3.7 

### 2019-05-21
  * added support of decouple tuning 
  * support real-time tuning result plotting 

### 2019-03-21
  * added ResNet-18 Example for HeteroCL

### 2019-03-11
  * introduced intrusive APIs for specifying tuning variable  
  * added OS environment specifier for different tuning mode   
  * added ZeroMQ framework for proposal distribution over cluster 

### 2019-03-02
  * added README and basic use cases
  * fixed Jinja tojson render error for Boolean vars with filter patch

### 2019-02-26
  * added the objective declaration support in annotation  
  * added report-api mapping mode and auto-test shell script for LAMBDA